Update Service.sh